# breeze

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/breeze/ContentManager/: contentmanager.hpp
src/: CMakeLists.txt  parser.cpp  parser.hpp
src/ContentManager/: CMakeLists.txt  contentmanager.cpp
